--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#ffffff">
      <meta
       name="description"
-      content="Lise Braun galeriste, curator et évenement artistique"
+      content="Lise Braun art, curation and artistic events "
     />
    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
