--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#000000">
      <meta
       name="description"
-      content="Lise Braun art, curation and artistic events "
+      content="Lise Braun art, curation and artistic events"
     />
    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>Lise Braun art</title>
+    <title>Lise Braun art curation and artistic events</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
