--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>Lise Braun art curation and artistic events</title>
+    <title>Lise Braun art</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
